# simplenote

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
simplenote/: hooks.py  patches.txt
simplenote/config/: desktop.py  docs.py
simplenote/doctype/note/: note.json  note.py  test_note.py
