[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simplenote"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dynamic = ["version", "description"]
readme = "README.md"
dependencies = [
    "frappe"
]
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/mgalore/simplenote"

[tool.bench.dev-dependencies]
coverage = "~=6.5.0"
Faker = "~=13.12.1"
pyngrok = "~=5.0.5"